--- a/rene_nunes/20240806_admin-template/assets/css/style.css
+++ b/rene_nunes/20240806_admin-template/assets/css/style.css
@@ -273,4 +273,9 @@ body {
       border: 0;
       cursor: pointer; }
 
+.description {
+  height: 80px;
+  max-width: 560;
+  resize: none; }
+
 /*# sourceMappingURL=style.css.map */
