--- a/Pedro Zimermann/20240806_admin-template/assets/css/style.scss
+++ b/Pedro Zimermann/20240806_admin-template/assets/css/style.scss
@@ -136,8 +136,9 @@ body {
 			height: 100%;
 			width: 250px;
 			position: relative;
-			color: #FFF;
+			color: #ffffff;
 			background-color: #283142;
+			
 
 			.main-menu-inside {
 				position: absolute;
@@ -146,23 +147,34 @@ body {
 				padding-top: 15px;
 				padding-bottom: 15px;
 				overflow: auto;
+				
 
 				.title {
 					display: block;
 					padding: 12px 24px;
-					font-size: 12px;
+					font-size: 15px;
 					text-transform: uppercase;
 				}
 
 				ul {
-
+					list-style: none;
+					
+					
 					li {
+						
+						
 
 						a {
 							display: block;
 							padding: 12px 24px;
 							font-size: 14px;
 							color: inherit;
+							text-decoration: none;
+							display: flex;
+							column-gap: 10px;
+							
+							
+							
 						}
 					}
 				}
