--- a/Gabriel Bueno Nazario/2021105_revisão-saep/style.css
+++ b/Gabriel Bueno Nazario/2021105_revisão-saep/style.css
@@ -41,10 +41,16 @@ label {
     display: block;
 }
 
-input {
+input , select{
     padding: 10px;
 }
 
 button {
     padding: 10px;
+}
+
+.content {
+    display: flex;
+    justify-content: space-between;
+    column-gap: 30px;
 }
