--- a/Gabriel Bueno Nazario/2021105_revisão-saep/style.css
+++ b/Gabriel Bueno Nazario/2021105_revisão-saep/style.css
@@ -49,8 +49,18 @@ button {
     padding: 10px;
 }
 
-.content {
+.conteiner {
     display: flex;
     justify-content: space-between;
     column-gap: 30px;
+}
+
+content {
+    flex: 1;
+}
+
+.item {
+    border: 1px solid #CCC;
+    border-radius: 10px;
+    padding: 15px;
 }
